# oclint

./: .gitignore  .travis.yml  LICENSE  README  README.md
oclint-core/: CMakeLists.txt  LICENSE  main.cpp
oclint-core/cmake/: OCLintConfig.cmake
oclint-core/include/oclint/: AbstractResults.h  CommandLineOptions.h  Constants.h  Processor.h  RawResults.h  ReportableResults.h  Reporter.h  ResultCollector.h  Results.h  RuleBase.h  RuleCarrier.h  RuleConfiguration.h  RuleSet.h  UniqueResults.h  Version.h  Violation.h  ViolationNode.h  ViolationSet.h
oclint-core/lib/: AbstractResults.cpp  CMakeLists.txt  Constants.cpp  Processor.cpp  RawResults.cpp  ResultCollector.cpp  Results.cpp  RuleBase.cpp  RuleCarrier.cpp  RuleConfiguration.cpp  RuleSet.cpp  UniqueResults.cpp  Version.cpp  Violation.cpp  ViolationNode.cpp  ViolationSet.cpp
oclint-core/test/: CMakeLists.txt  ProcessorTest.h  RawResultsTest.cpp  ResultCollectorTest.cpp  ResultsTest.cpp  ResultsTest.h  RuleBaseTest.cpp  RuleBaseTest.h  RuleCarrierTest.cpp  RuleConfigurationTest.cpp  RuleConfigurationTest.h  RuleSetTest.cpp  RuleSetTest.h  UniqueResultsTest.cpp  VersionTest.cpp  ViolationNodeTest.h  ViolationSetTest.cpp  ViolationSetTest.h  ViolationTest.cpp  ViolationTest.h  test_main.cpp
oclint-driver/: CMakeLists.txt  LICENSE  main.cpp  main_docgen.cpp  reporters.h  reporters_dlfcn_port.cpp  reporters_windows_port.cpp  rules.h  rules_dlfcn_port.cpp  rules_windows_port.cpp
oclint-driver/include/oclint/: Analytics.h  Analyzer.h  CarrierDiagnosticConsumer.h  CompilerInstance.h  ConfigFile.h  Debug.h  DiagnosticDispatcher.h  Driver.h  ExitCode.h  GenericException.h  Logger.h  Options.h  Queue.h  RulesetBasedAnalyzer.h  RulesetFilter.h  ThreadPool.h
oclint-driver/lib/: Analytics.cpp  CMakeLists.txt  CarrierDiagnosticConsumer.cpp  CompilerInstance.cpp  ConfigFile.cpp  Debug.cpp  DiagnosticDispatcher.cpp  Driver.cpp  GenericException.cpp  Logger.cpp  Options.cpp  RulesetBasedAnalyzer.cpp  RulesetFilter.cpp  ThreadPool.cpp
oclint-driver/test/: CMakeLists.txt  RulesetFilterTest.cpp
oclint-metrics/: CMakeLists.txt  LICENSE
oclint-metrics/lib/: CMakeLists.txt  CyclomaticComplexityMetric.cpp  NPathComplexityMetric.cpp  NcssMetric.cpp  StmtDepthMetric.cpp
oclint-metrics/test/: CMakeLists.txt  CanaryTest.cpp  CyclomaticComplexityMetricTest.cpp  NPathComplexityMetricTest.cpp  NcssMetricTest.cpp  StmtDepthMetricTest.cpp
oclint-metrics/test/headers/: TestHeaders.h
oclint-reporters/: CMakeLists.txt  LICENSE
oclint-reporters/reporters/: CMakeLists.txt  HTMLReporter.cpp  JSONReporter.cpp  PMDReporter.cpp  TextReporter.cpp  XMLReporter.cpp  XcodeReporter.cpp
oclint-reporters/template/: Reporter.tmpl  ReporterTest.tmpl
oclint-reporters/test/: CMakeLists.txt  CanaryTest.cpp  HTMLReporterTest.cpp  JSONReporterTest.cpp  PMDReporterTest.cpp  ReportTestResults.h  TextReporterTest.cpp  XMLReporterTest.cpp  XcodeReporterTest.cpp
oclint-rules/: CMakeLists.txt  LICENSE
oclint-rules/include/oclint/: AbstractASTMatcherRule.h  AbstractASTRuleBase.h  AbstractASTVisitorRule.h  AbstractSourceCodeReaderRule.h
oclint-rules/lib/: AbstractASTMatcherRule.cpp  AbstractASTRuleBase.cpp  AbstractSourceCodeReaderRule.cpp  CMakeLists.txt
oclint-rules/lib/helper/: AttributeHelper.cpp  CMakeLists.txt  EnforceHelper.cpp  SuppressHelper.cpp
oclint-rules/lib/metric/: CMakeLists.txt  CyclomaticComplexityMetric.cpp  NPathComplexityMetric.cpp  NcssMetric.cpp
oclint-rules/lib/util/: ASTUtil.cpp  CMakeLists.txt  StdUtil.cpp
oclint-rules/rules/: CMakeLists.txt
oclint-rules/rules/abstract/: AbstractEmptyBlockStmtRule.h  AbstractNullCheckRule.h
oclint-rules/rules/basic/: AbstractNullCheckRule.h  BitwiseOperatorInConditionalRule.cpp  BrokenNullCheckRule.cpp  BrokenOddnessCheckRule.cpp  CMakeLists.txt  CollapsibleIfStatementsRule.cpp  ConstantConditionalOperatorRule.cpp  ConstantIfExpressionRule.cpp  DeadCodeRule.cpp  DoubleNegativeRule.cpp  EmptyElseBlockRule.cpp  EmptyIfStatementRule.cpp  ForLoopShouldBeWhileLoopRule.cpp  GotoStatementRule.cpp  JumbledIncrementerRule.cpp  MisplacedNullCheckRule.cpp  MultipleUnaryOperatorRule.cpp  ReturnFromFinallyBlockRule.cpp  ThrowExceptionFromFinallyBlockRule.cpp
oclint-rules/rules/cocoa/: CMakeLists.txt  ObjCVerifyIsEqualHashRule.cpp  ObjCVerifyMustCallSuperRule.cpp  ObjCVerifyProhibitedCallRule.cpp  ObjCVerifyProtectedMethodRule.cpp  ObjCVerifySubclassMustImplementRule.cpp
oclint-rules/rules/convention/: AvoidBranchingStatementAsLastInLoopRule.cpp  BaseClassDestructorShouldBeVirtualOrProtectedRule.cpp  CMakeLists.txt  ConfusingConditionalOperatorRule.cpp  CoveredSwitchStatementsDontNeedDefaultRule.cpp  DefaultLabelNotLastInSwitchStatementRule.cpp  DestructorOfVirtualClassRule.cpp  InvertedIfElseRule.cpp  InvertedLogicRule.cpp  MissingBreakInSwitchStatementRule.cpp  NonCaseLabelInSwitchStatementRule.cpp  ObjCAssignIvarOutsideAccessorsRule.cpp  ParameterReassignmentRule.cpp  PreferEarlyExitRule.cpp  SwitchStatementsShouldHaveDefaultRule.cpp  TooFewBranchesInSwitchStatementRule.cpp  UseSmartPtrRule.cpp
oclint-rules/rules/cuda/: CMakeLists.txt  CudaBranchDivergenceRule.cpp
oclint-rules/rules/custom/: FeatureEnvyRule.cpp
oclint-rules/rules/design/: AvoidDefaultArgumentsOnVirtualMethodsRule.cpp  AvoidPrivateStaticMembersRule.cpp  CMakeLists.txt  FeatureEnvyRule.cpp
oclint-rules/rules/empty/: CMakeLists.txt  EmptyBlockStmtRule.h  EmptyCatchStatementRule.cpp  EmptyDoWhileStatementRule.cpp  EmptyElseBlockRule.cpp  EmptyFinallyStatementRule.cpp  EmptyForStatementRule.cpp  EmptyIfStatementRule.cpp  EmptySwitchStatementRule.cpp  EmptyTryStatementRule.cpp  EmptyWhileStatementRule.cpp
oclint-rules/rules/migration/: AssignIvarOutsideAccessorsRule.cpp  CMakeLists.txt  ObjCAssignIvarOutsideAccessorsRule.cpp  ObjCBoxedExpressionsRule.cpp  ObjCContainerLiteralsRule.cpp  (+2 more)
oclint-rules/template/: ASTMatcherRule.tmpl  ASTVisitorRule.tmpl  ClangDeclNodes  ClangStmtNodes  GenericRule.tmpl  RuleTest.tmpl  SourceCodeReaderRule.tmpl
oclint-rules/test/: CMakeLists.txt  CanaryTest.cpp  CanaryTest.h  test_main.cpp
(+270 files in other folders)
