CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(OCLINT_CORE)

SET(CMAKE_MODULE_PATH
    ${CMAKE_MODULE_PATH}
    "${CMAKE_CURRENT_SOURCE_DIR}/cmake"
    )

INCLUDE(OCLintConfig)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include)

ADD_SUBDIRECTORY(lib)

IF(TEST_BUILD)
    ADD_SUBDIRECTORY(test)
ENDIF()
