CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(OCLINT_REPORTERS)

SET(CMAKE_MODULE_PATH
    ${CMAKE_MODULE_PATH}
    "${CMAKE_CURRENT_SOURCE_DIR}/../oclint-core/cmake"
    )

INCLUDE(OCLintConfig)

INCLUDE_DIRECTORIES(${OCLINT_SOURCE_DIR}/include)
LINK_DIRECTORIES(${OCLINT_BUILD_DIR}/lib)

IF(TEST_BUILD)
    ADD_SUBDIRECTORY(test)
ELSE(TEST_BUILD)
    ADD_SUBDIRECTORY(reporters)
ENDIF()
